@@ -34,7 +34,7 @@
 #include "smp_lib.h"
 
 
-static char * version_str = "1.14 20080106";    /* sas-2 rev 13 */
+static char * version_str = "1.15 20081121";    /* sas-2 rev 15 */
 
 /* The original SMP definition (sas-r05.pdf) didn't have request
    and response length fields (they were reserved single byte fields).
@@ -59,11 +59,12 @@ struct smp_func_def_rrlen smp_def_rrlen_arr[] = {
     /* in numerical order by 'func' */
     {SMP_FN_REPORT_GENERAL, 0, 6},
     {SMP_FN_REPORT_MANUFACTURER, 0, 14},
-    {SMP_FN_READ_GPIO_REG, -3, -3},     /* not applicable: see SFF-8485 */
+    {SMP_FN_READ_GPIO_REG, -3, -3}, /* obsolete, not applicable: SFF-8485 */
     {SMP_FN_REPORT_SELF_CONFIG, -2, -2},
     {SMP_FN_REPORT_ZONE_PERMISSION_TBL, -2, -2},/* variable length response */
     {SMP_FN_REPORT_ZONE_MANAGER_PASS, -2, -2},
     {SMP_FN_REPORT_BROADCAST, -2, -2},
+    {SMP_FN_READ_GPIO_REG_ENH, -3, -3}, /* not applicable: SFF-8485 */
     {SMP_FN_DISCOVER, 2, 0xc},
     {SMP_FN_REPORT_PHY_ERR_LOG, 2, 6},
     {SMP_FN_REPORT_PHY_SATA, 2, 13},
@@ -74,7 +75,8 @@ struct smp_func_def_rrlen smp_def_rrlen_arr[] = {
     {SMP_FN_REPORT_EXP_ROUTE_TBL_LIST, -2, -2},
     {SMP_FN_CONFIG_GENERAL, 3, 0},
     {SMP_FN_ENABLE_DISABLE_ZONING, -2, 0},
-    {SMP_FN_WRITE_GPIO_REG, -3, -3},    /* not applicable: see SFF-8485 */
+    {SMP_FN_WRITE_GPIO_REG, -3, -3}, /* obsolete, not applicable: SFF-8485 */
+    {SMP_FN_WRITE_GPIO_REG_ENH, -3, -3}, /* not applicable: SFF-8485 */
     {SMP_FN_ZONED_BROADCAST, -2, 0},            /* variable length request */
     {SMP_FN_ZONE_LOCK, -2, -2},
     {SMP_FN_ZONE_ACTIVATE, -2, 0},
@@ -143,6 +145,7 @@ static struct smp_val_name smp_func_results[] =
     {SMP_FRES_NO_PHYSICAL_PRESENCE, "No physical presence"},
     {SMP_FRES_SAVING_NOT_SUPPORTED, "Saving not supported"},
     {SMP_FRES_SOURCE_ZONE_GROUP, "Source zone group does not exist"},
+    {SMP_FRES_DIS_PASSWORD_NOT_SUPPORTED, "Disable password not supported"},
     {0x0, NULL},
 };
 
