@@ -2,7 +2,7 @@ smp-utils (0.94-0.1) unstable; urgency=low
 
   * make sgv4 includes more robust for lk 2.6.27
 
- -- Douglas Gilbert <dgilbert@interlog.org>  Sun, 06 Jan 2008 11:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.org>  Sat, 21 Nov 2008 23:00:00 -0500
 
 smp-utils (0.93-0.1) unstable; urgency=low
 
